[#24] Fix footer content displaying on mobile.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -130,6 +130,12 @@ footer {
   width: 90%;
   margin: 0 auto;
   padding: 1em;
+
+  @include mobile {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .anchor {
